src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/CD4AC3012.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram CD4AC3012 {

	class A;
	class B;
	
	association assoc1 <<ordered>> A -> B;
	association assoc1 A -> B <<ordered>>;

}